--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "JUNHA"
-  avatar           : "/assets/images/junha.JPG"
+  avatar           : "/assets/images/ohjinjin.JPG"
   bio              : "I am an **amazing** person."
   location         : "SoonCheonHyang Univ."
   email            : "junha4304@gmail.com"
