--- a/_config.yml
+++ b/_config.yml
@@ -108,8 +108,8 @@ analytics:
 # Site Author
 author:
   name             : "JUNHA"
-  avatar           : "/assets/images/ohjinjin.JPG"
-  bio              : "I am an **amazing** person."
+  avatar           : "/assets/images/junha.jpg"
+  bio              : "welcom to Jun_pace"
   location         : "SoonCheonHyang Univ."
   email            : "junha4304@gmail.com"
   links:
