--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "JUNHA"
   avatar           : "/assets/images/junha.jpg"
-  bio              : "welcom to Jun_pace"
+  bio              : "welcome to Jun_pace"
   location         : "SoonCheonHyang Univ."
   email            : "junha4304@gmail.com"
   links:
