--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "JUNHA"
-  avatar           : "/assets/images/junha.png"
+  avatar           : "/assets/images/junha.jpg"
   bio              : "welcome to Jun_pace"
   location         : "Yonsei Univ."
   email            : "junha4304@gmail.com"
