--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ google:
 google_site_verification :
 bing_site_verification   :
 yandex_site_verification :
-naver_site_verification  :
+naver_site_verification  : "844d4bb27c404384e13a549421861cd4e70093b4"
 
 # Social Sharing
 twitter:
