--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   name             : "JUNHA"
   avatar           : "/assets/images/junha.png"
   bio              : "welcome to Jun_pace"
-  location         : "Yonsei Univ."
+  location         : "Republic of Korea"
   email            : "junha4304@gmail.com"
   links:
 
