--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
 
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "github.io.junha-lee"
+      url: "https://junsoultour.blogspot.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/junha-lee"
