--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ author:
   email            : "junha4304@gmail.com"
   links:
 
-    - label: "Website"
+    - label: "여행 사진들"
       icon: "fas fa-fw fa-link"
       url: "https://junsoultour.blogspot.com/"
     - label: "GitHub"
