대규모 업데이트

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "JUNHA"
   avatar           : "/assets/images/junha.png"
-  bio              : "welcome to Jun_pace"
+  bio              : "welcome to Jun's_pace"
   location         : "Republic of Korea"
   email            : "junha4304@gmail.com"
   links:
