--- a/_config.yml
+++ b/_config.yml
@@ -120,6 +120,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/junha-lee"
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/leejunha/"
 
 
 
