--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,7 @@
 # main links
 main:
-  - title: "About"
-    url: "/about/"
-  - title: "Category"
-    url: /categories/
+  - title: "Series"
+    url: /series/
   - title: "Tag"
     url: /tags/
   - title: "Search"
@@ -11,10 +9,16 @@ main:
 docs:
   - title: "대목차"
     children:
-    - title: "Category"
-      url: /categories/
-    - title: "Tag"
-      url: /tags/     
+  - title: "Paper Review"
+    url: /series/#paper-review
+  - title: "Lecture Review"
+    url: /series/#Lecture-Review
+  - title: "project"
+    url: /series/#project
+  - title: "study"
+    url: /series/#study
+  - title: "etc"
+    url: /series/#etc
 
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
