--- a/_config.yml
+++ b/_config.yml
@@ -261,7 +261,8 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false # 읽는 시간 대신 날짜
+      show_date : true
       comments:  true
       share: true
       related: true
