--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "mint" #"neon", "air", "aqua", "contrast", "dirt", "d
 locale                   : "ko-KR"
 title                    : "Jun's_pace"
 title_separator          : "|"
-subtitle                 : "small positive action"
+subtitle                 : "Developer who wants to be a 'LAB'tor"
 name                     : "Junha"
 description              : "Junha's DevLog."
 url                      : "https://junha-lee.github.io"
